--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,6 +104,13 @@ h2 {
   margin-top: 1.5rem;
 }
 
+.video-container iframe {
+  width: 80%;   
+  height: 450px; 
+  max-width: 100%;
+  border: 0;
+}
+
 footer {
   text-align: center;
   background-color: #004c91;
