--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,12 +102,20 @@ h2 {
   display: flex;
   justify-content: center;
   margin-top: 1.5rem;
+  width: 100%;
+  max-width: 900px; 
+  position: relative;
+  padding-bottom: 56.25%; 
+  height: 0;
+  overflow: hidden;
 }
 
 .video-container iframe {
-  width: 80%;   
-  height: 450px; 
-  max-width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   border: 0;
 }
 
