--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,22 +100,14 @@ h2 {
 
 .video-container {
   display: flex;
-  justify-content: center;
+  justify-content: center; 
   margin-top: 1.5rem;
-  width: 100%;
-  max-width: 900px; 
-  position: relative;
-  padding-bottom: 56.25%; 
-  height: 0;
-  overflow: hidden;
 }
 
 .video-container iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  width: 80%;   
+  height: 450px; 
+  max-width: 100%; 
   border: 0;
 }
 
