--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 .hero {
-  background: url("../images/hero-bg.jpg") 
+  background: url("../assets/images/hero-bg.jpg") 
   color: white;
   height: 70vh;
   display: flex;
