--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@ body {
 
 /* ===== Hero ===== */
 .hero {
-  background: url("../assets/images/hero-bg.jpg");
+  background: url("../images/hero-bg.jpg");
   height: 70vh;
   display: flex;
   justify-content: center;
